CREATE DATABASE sae51db; USE sae51db;
CREATE TABLE "data" (
  "Id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "marque" varchar,
  "OS" varchar,
  "DisqueGB" int,
  "RamGB" int,
  "DateAchat" date,
  "user" varchar,
  "LogInst" json
);

CREATE TABLE "logiciel" (
  "NomLog" varchar,
  "Licence" varchar,
  "Version" varchar,
  "PcInst" int,
  "TechInst" varchar
);

CREATE TABLE "technicien" (
  "NomTech" varchar,
  "DateInter" date,
  "PcInter" int
);

CREATE TABLE "maj" (
  "PcMaj" int,
  "TechMaj" varchar,
  "DateMaj" date
);

ALTER TABLE "data" ADD FOREIGN KEY ("Id") REFERENCES "logiciel" ("PcInst");

ALTER TABLE "technicien" ADD FOREIGN KEY ("NomTech") REFERENCES "logiciel" ("TechInst");

ALTER TABLE "data" ADD FOREIGN KEY ("LogInst") REFERENCES "logiciel" ("NomLog");

ALTER TABLE "data" ADD FOREIGN KEY ("Id") REFERENCES "maj" ("PcMaj");

ALTER TABLE "technicien" ADD FOREIGN KEY ("NomTech") REFERENCES "maj" ("TechMaj");

ALTER TABLE "data" ADD FOREIGN KEY ("Id") REFERENCES "technicien" ("PcInter");

